header & footer moved

--- a/eventpromotion/styles/event.css
+++ b/eventpromotion/styles/event.css
@@ -136,7 +136,8 @@ body {
 }
 #event_page #event_main_section .inner #event_main #event_down_text #roulette_uparr img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 #event_page #event_main_section .inner #event_main #event_down_text span {
   font-size: 3rem;
