--- a/login/styles/mypage.scss
+++ b/login/styles/mypage.scss
@@ -4,6 +4,12 @@
 // variables
 @import "../../styles/variables.scss";
 
+// header
+@import "../../styles/header.scss";
+
+// footer
+@import "../../styles/footer.scss";
+
 // common
 html {
   font-size: 62.5%;
@@ -16,141 +22,6 @@ body {
   flex-direction: column;
   gap: 100px;
   font-size: 1.6rem;
-}
-
-// header
-header {
-  width: 100%;
-  height: 260px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: map-get($map: $color, $key: light);
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.07);
-  // position: sticky;
-  // top: 0;
-  .header_event {
-    width: 100%;
-    height: 60px;
-    background: map-get($map: $color, $key: main-01);
-    color: map-get($map: $color, $key: light);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: map-get($map: $font, $key: pretendard);
-    font-size: 2rem;
-    .fa-chevron-right {
-      cursor: pointer;
-    }
-  }
-  .header_inner {
-    width: 1650px;
-    height: 200px;
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 0;
-    position: relative;
-    .header_inner_left {
-      display: flex;
-      justify-content: start;
-      align-items: end;
-      position: absolute;
-      left: 0;
-      bottom: 20px;
-      ul {
-        display: flex;
-        gap: 60px;
-        li {
-          font-family: map-get($map: $font, $key: pretendard);
-          font-size: 2.8rem;
-          cursor: pointer;
-        }
-      }
-    }
-    .header_inner_right {
-      display: flex;
-      flex-direction: column;
-      align-items: end;
-      gap: 95px;
-      position: absolute;
-      right: 0;
-      .inner_right_top {
-        ul {
-          display: flex;
-          align-items: center;
-          gap: 10px;
-          font-family: map-get($map: $font, $key: pretendard);
-          font-size: 1.8rem;
-          li {
-            cursor: pointer;
-          }
-        }
-      }
-      .inner_right_bottom {
-        display: flex;
-        align-items: center;
-        gap: 25px;
-        .search_bar {
-          width: 280px;
-          height: 40px;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          padding: 10px 25px;
-          border-radius: 40px;
-          background: map-get($map: $color, $key: gray-f5f5f5);
-          input {
-            width: 90%;
-            background: inherit;
-            border: none;
-            opacity: 1;
-            font-family: map-get($map: $font, $key: pretendard);
-            &:focus {
-              outline: none;
-              &::placeholder {
-                transition: all 0.3s;
-                opacity: 0;
-              }
-            }
-          }
-          .fa-magnifying-glass {
-            cursor: pointer;
-          }
-        }
-        .basket {
-          .fa-cart-shopping {
-            width: 40px;
-            height: 32px;
-            font-size: 32px;
-            position: relative;
-            cursor: pointer;
-            p {
-              // width: 20px;
-              // height: 20px;
-              padding: 5px;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              background: map-get($map: $color, $key: main-01);
-              color: map-get($map: $color, $key: light);
-              border-radius: 50%;
-              position: absolute;
-              top: -5px;
-              right: -5px;
-              font-size: 12px;
-            }
-          }
-        }
-      }
-    }
-    .header_inner_logo {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-  }
 }
 
 // main
@@ -295,94 +166,6 @@ header {
       font-size: 2rem;
       text-decoration: underline;
       text-underline-offset: 5px;
-    }
-  }
-}
-
-// footer
-footer {
-  width: 100%;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: map-get($map: $color, $key: gray-f5f5f5);
-  color: map-get($map: $color, $key: gray-858585);
-  .footer_inner {
-    width: 1050px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    .footer_inner_left {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 30px;
-      img {
-        width: 170px;
-        height: 80px;
-      }
-      p {
-        font-family: map-get($map: $font, $key: pretendard);
-        font-size: 1.4rem;
-      }
-    }
-    .footer_inner_center {
-      display: flex;
-      flex-direction: column;
-      ul {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        li {
-          font-family: map-get($map: $font, $key: pretendard);
-          font-size: 1.6rem;
-          &:last-child {
-            font-size: 2rem;
-            font-weight: bold;
-          }
-        }
-      }
-    }
-    .footer_inner_right {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      font-family: map-get($map: $font, $key: pretendard);
-      .inner_right_top {
-        display: flex;
-        flex-direction: column;
-        ul {
-          li {
-            &:nth-child(1) {
-              font-size: 2.2rem;
-              font-weight: bold;
-            }
-            &:nth-child(2) {
-              font-size: 3.6rem;
-              font-weight: bold;
-            }
-          }
-        }
-      }
-      .inner_right_bottom {
-        display: flex;
-        gap: 5px;
-        .right_bottom_left {
-          display: flex;
-          flex-direction: column;
-          gap: 5px;
-          li {
-            &:nth-child(1) {
-              font-size: 1.6rem;
-              font-weight: bold;
-            }
-            &:nth-child(2) {
-              font-size: 1.2rem;
-            }
-          }
-        }
-      }
     }
   }
 }
