--- a/detail/styles/detail.css
+++ b/detail/styles/detail.css
@@ -15,18 +15,23 @@ a {
   color: inherit;
 }
 
-/* Product Thumbnail */
-/* Review Content */
-html {
-  font-size: 62.5%;
+/* Header & Footer */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body {
-  font-size: 1.6rem;
-  font-family: pretendard;
+ul,
+li {
+  list-style: none;
 }
 
-/* header */
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 header {
   width: 100%;
   height: 260px;
@@ -36,6 +41,9 @@ header {
   align-items: center;
   background: #fff;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.07);
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 header .header_event {
   width: 100%;
@@ -131,14 +139,18 @@ header .header_inner .header_inner_right .inner_right_bottom .search_bar input:f
 header .header_inner .header_inner_right .inner_right_bottom .search_bar .fa-magnifying-glass {
   cursor: pointer;
 }
+header .header_inner .header_inner_right .inner_right_bottom .basket {
+  position: relative;
+}
 header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
   width: 40px;
   height: 32px;
   font-size: 32px;
-  position: relative;
   cursor: pointer;
 }
-header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping p {
+header .header_inner .header_inner_right .inner_right_bottom .basket p {
+  width: 20px;
+  height: 20px;
   padding: 5px;
   display: flex;
   justify-content: center;
@@ -149,6 +161,7 @@ header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-sh
   position: absolute;
   top: -5px;
   right: -5px;
+  font-family: pretendard;
   font-size: 12px;
 }
 header .header_inner .header_inner_logo {
@@ -156,6 +169,114 @@ header .header_inner .header_inner_logo {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+footer {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #f5f5f5;
+  color: #858585;
+}
+footer .footer_inner {
+  width: 1050px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+footer .footer_inner .footer_inner_left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+footer .footer_inner .footer_inner_left img {
+  width: 170px;
+  height: 80px;
+}
+footer .footer_inner .footer_inner_left p {
+  font-family: pretendard;
+  font-size: 1.4rem;
+}
+footer .footer_inner .footer_inner_center {
+  display: flex;
+  flex-direction: column;
+}
+footer .footer_inner .footer_inner_center ul {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+footer .footer_inner .footer_inner_center ul li {
+  font-family: pretendard;
+  font-size: 1.6rem;
+}
+footer .footer_inner .footer_inner_center ul li:last-child {
+  font-size: 2rem;
+  font-weight: bold;
+}
+footer .footer_inner .footer_inner_right {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  font-family: pretendard;
+}
+footer .footer_inner .footer_inner_right .inner_right_top {
+  display: flex;
+  flex-direction: column;
+}
+footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
+  font-size: 2.2rem;
+  font-weight: bold;
+}
+footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
+  font-size: 3.6rem;
+  font-weight: bold;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom {
+  display: flex;
+  gap: 5px;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
+  font-size: 1.6rem;
+  font-weight: bold;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
+  font-size: 1.2rem;
+}
+
+/* Product Thumbnail */
+/* Review Content */
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: pretendard;
 }
 
 /* main */
@@ -736,86 +857,4 @@ header .header_inner .header_inner_logo {
   font-weight: 400;
   line-height: 3.3rem;
   color: #000;
-}
-
-/* footer */
-footer {
-  width: 100%;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #f5f5f5;
-  color: #858585;
-}
-footer .footer_inner {
-  width: 1050px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-footer .footer_inner .footer_inner_left {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
-}
-footer .footer_inner .footer_inner_left img {
-  width: 170px;
-  height: 80px;
-}
-footer .footer_inner .footer_inner_left p {
-  font-family: pretendard;
-  font-size: 1.4rem;
-}
-footer .footer_inner .footer_inner_center {
-  display: flex;
-  flex-direction: column;
-}
-footer .footer_inner .footer_inner_center ul {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-footer .footer_inner .footer_inner_center ul li {
-  font-family: pretendard;
-  font-size: 1.6rem;
-}
-footer .footer_inner .footer_inner_center ul li:last-child {
-  font-size: 2rem;
-  font-weight: bold;
-}
-footer .footer_inner .footer_inner_right {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  font-family: pretendard;
-}
-footer .footer_inner .footer_inner_right .inner_right_top {
-  display: flex;
-  flex-direction: column;
-}
-footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
-  font-size: 2.2rem;
-  font-weight: bold;
-}
-footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
-  font-size: 3.6rem;
-  font-weight: bold;
-}
-footer .footer_inner .footer_inner_right .inner_right_bottom {
-  display: flex;
-  gap: 5px;
-}
-footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
-  font-size: 1.6rem;
-  font-weight: bold;
-}
-footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
-  font-size: 1.2rem;
 }
