--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 * {
   margin: 0;
   padding: 0;
@@ -12,4 +13,738 @@ li {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: pretendard;
+  width: 100%;
+}
+
+main {
+  width: 100%;
+}
+main #main_con1 {
+  width: 100%;
+  height: 850px;
+  display: flex;
+  justify-content: center;
+}
+main #main_con1 .main_inner {
+  width: 1050px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+main #main_con1 .main_inner h1 {
+  font-size: 3rem;
+}
+main #main_con1 .main_inner .main_it {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+}
+main #main_con1 .main_inner .main_it .main_type1 .img {
+  width: 240px;
+  height: 240px;
+  border: 1px solid #f00;
+  margin-bottom: 15px;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info {
+  width: 240px;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info .main_title {
+  font-size: 1.8rem;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info .main_shopping {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info .main_shopping p {
+  font-size: 2.2rem;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info .main_shopping .icon {
+  display: flex;
+  justify-content: right;
+  gap: 5px;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info .main_shopping .icon .fa-heart {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info .main_shopping .icon .fa-cart-shopping {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con1 .main_inner .main_it .main_type2 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+main #main_con1 .main_inner .main_it .main_type2 .img {
+  width: 240px;
+  height: 240px;
+  border: 1px solid #f00;
+  position: relative;
+}
+main #main_con1 .main_inner .main_it .main_type2 .img button {
+  background: #f37100;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 5px;
+  border: none;
+  border-radius: 4px;
+  position: absolute;
+  top: 3%;
+  left: 3%;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 240px;
+  height: 80px;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info h3 {
+  font-size: 1.8rem;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  gap: 10px;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent {
+  display: flex;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent p {
+  color: #f37100;
+  font-size: 1.8rem;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent p b {
+  font-size: 3.6rem;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price {
+  display: flex;
+  flex-direction: column;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price span {
+  color: #ccc;
+  text-decoration: line-through;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price p {
+  font-size: 2.2rem;
+  color: #000;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .icon {
+  display: flex;
+  justify-content: right;
+  gap: 5px;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .icon .fa-heart {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .icon .fa-cart-shopping {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con2 {
+  width: 100%;
+  height: 850px;
+  display: flex;
+  justify-content: center;
+}
+main #main_con2 .main_inner {
+  width: 1050px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+main #main_con2 .main_inner h1 {
+  font-size: 3rem;
+}
+main #main_con2 .main_inner h1 img {
+  width: 10px;
+  height: 10px;
+}
+main #main_con2 .main_inner .main_it {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+}
+main #main_con2 .main_inner .main_it .main_type1 .img {
+  width: 240px;
+  height: 240px;
+  border: 1px solid #f00;
+  margin-bottom: 15px;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info {
+  width: 240px;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info .main_title {
+  font-size: 1.8rem;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info .main_shopping {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info .main_shopping p {
+  font-size: 2.2rem;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info .main_shopping .icon {
+  display: flex;
+  justify-content: right;
+  gap: 5px;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info .main_shopping .icon .fa-heart {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info .main_shopping .icon .fa-cart-shopping {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con2 .main_inner .main_it .main_type2 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+main #main_con2 .main_inner .main_it .main_type2 .img {
+  width: 240px;
+  height: 240px;
+  border: 1px solid #f00;
+  position: relative;
+}
+main #main_con2 .main_inner .main_it .main_type2 .img button {
+  background: #f37100;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 5px;
+  border: none;
+  border-radius: 4px;
+  position: absolute;
+  top: 3%;
+  left: 3%;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 240px;
+  height: 80px;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info h3 {
+  font-size: 1.8rem;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  gap: 10px;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent {
+  display: flex;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent p {
+  color: #f37100;
+  font-size: 1.8rem;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent p b {
+  font-size: 3.6rem;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price {
+  display: flex;
+  flex-direction: column;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price span {
+  color: #ccc;
+  text-decoration: line-through;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price p {
+  font-size: 2.2rem;
+  color: #000;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .icon {
+  display: flex;
+  justify-content: right;
+  gap: 5px;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .icon .fa-heart {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .icon .fa-cart-shopping {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con3 {
+  width: 100%;
+  height: 444px;
+  display: flex;
+  justify-content: center;
+  background: #fffaf1;
+}
+main #main_con3 .main_inner {
+  width: 1050px;
+  display: flex;
+}
+main #main_con3 .main_inner .main_title2 .main_title3 {
+  font-size: 3rem;
+}
+main #main_con3 .main_inner .main_title2 .main_title3 b {
+  color: #f37100;
+}
+main #main_con3 .main_inner .main_title2 .line {
+  width: 220px;
+  height: 1px;
+  background-color: #f37100;
+}
+main #main_con3 .main_inner .main_title2 p {
+  margin-top: 15px;
+}
+main #main_con3 .main_inner .main_recipe {
+  display: flex;
+  gap: 30px;
+}
+main #main_con3 .main_inner .main_recipe .main_item {
+  width: 240px;
+  height: 304px;
+  position: relative;
+}
+main #main_con3 .main_inner .main_recipe .main_item img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+  filter: brightness(70%);
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 120px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info .recipe_title .fa-heart {
+  font-size: 1.6rem;
+  display: flex;
+  justify-content: right;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info .recipe_title h4 {
+  font-size: 1.6rem;
+  margin-bottom: 6px;
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info .recipe_title button {
+  border: none;
+  border-radius: 12px;
+  padding: 8px;
+  color: #fff;
+  font-size: 1rem;
+  font-family: pretendard;
+  background: rgba(0, 0, 0, 0.6);
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info .recipe_text {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info .recipe_text .recipe_line {
+  width: 204px;
+  height: 1px;
+  background-color: #fff;
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info .recipe_text p {
+  font-size: 1.2rem;
+}
+main #main_con4 {
+  width: 100%;
+  height: 850px;
+  display: flex;
+  justify-content: center;
+}
+main #main_con4 .main_inner {
+  width: 1050px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+main #main_con4 .main_inner .line {
+  width: 100%;
+  height: 2px;
+  background-color: #f37100;
+}
+main #main_con4 .main_inner .main_sale_title {
+  display: flex;
+  justify-content: space-between;
+}
+main #main_con4 .main_inner .main_sale_title h1 {
+  font-size: 3rem;
+}
+main #main_con4 .main_inner .main_sale_title .sale_time {
+  color: #fff;
+  background: #f37100;
+  font-size: 1.6rem;
+  border-radius: 10px;
+  padding: 10px 15px;
+}
+main #main_con4 .main_inner .main_it {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+}
+main #main_con4 .main_inner .main_it .main_type2 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+main #main_con4 .main_inner .main_it .main_type2 .img {
+  width: 240px;
+  height: 240px;
+  border: 1px solid #f00;
+  position: relative;
+}
+main #main_con4 .main_inner .main_it .main_type2 .img button {
+  background: #f37100;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 5px;
+  border: none;
+  border-radius: 4px;
+  position: absolute;
+  top: 3%;
+  left: 3%;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 240px;
+  height: 80px;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info h3 {
+  font-size: 1.8rem;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  gap: 10px;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent {
+  display: flex;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent p {
+  color: #f37100;
+  font-size: 1.8rem;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent p b {
+  font-size: 3.6rem;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price {
+  display: flex;
+  flex-direction: column;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price span {
+  color: #ccc;
+  text-decoration: line-through;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price p {
+  font-size: 2.2rem;
+  color: #000;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .icon {
+  display: flex;
+  justify-content: right;
+  gap: 5px;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .icon .fa-heart {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .icon .fa-cart-shopping {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+
+header {
+  width: 100%;
+  height: 260px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.07);
+}
+header .header_event {
+  width: 100%;
+  height: 60px;
+  background: #f37100;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: pretendard;
+  font-size: 2rem;
+}
+header .header_event .fa-chevron-right {
+  cursor: pointer;
+}
+header .header_inner {
+  width: 1650px;
+  height: 200px;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
+  position: relative;
+}
+header .header_inner .header_inner_left {
+  display: flex;
+  justify-content: start;
+  align-items: end;
+  position: absolute;
+  left: 0;
+  bottom: 20px;
+}
+header .header_inner .header_inner_left ul {
+  display: flex;
+  gap: 60px;
+}
+header .header_inner .header_inner_left ul li {
+  font-family: pretendard;
+  font-size: 2.8rem;
+  cursor: pointer;
+}
+header .header_inner .header_inner_right {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  gap: 95px;
+  position: absolute;
+  right: 0;
+}
+header .header_inner .header_inner_right .inner_right_top ul {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-family: pretendard;
+  font-size: 1.8rem;
+}
+header .header_inner .header_inner_right .inner_right_top ul li {
+  cursor: pointer;
+}
+header .header_inner .header_inner_right .inner_right_bottom {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar {
+  width: 280px;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 25px;
+  border-radius: 40px;
+  background: #f5f5f5;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar input {
+  width: 90%;
+  background: inherit;
+  border: none;
+  opacity: 1;
+  font-family: pretendard;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar input:focus {
+  outline: none;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar input:focus::-moz-placeholder {
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 0;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar input:focus::placeholder {
+  transition: all 0.3s;
+  opacity: 0;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar .fa-magnifying-glass {
+  cursor: pointer;
+}
+header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
+  width: 40px;
+  height: 32px;
+  font-size: 32px;
+  position: relative;
+  cursor: pointer;
+}
+header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping p {
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #f37100;
+  color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  font-size: 12px;
+}
+header .header_inner .header_inner_logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+footer {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #f5f5f5;
+  color: #858585;
+}
+footer .footer_inner {
+  width: 1050px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+footer .footer_inner .footer_inner_left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+footer .footer_inner .footer_inner_left img {
+  width: 170px;
+  height: 80px;
+}
+footer .footer_inner .footer_inner_left p {
+  font-family: pretendard;
+  font-size: 1.4rem;
+}
+footer .footer_inner .footer_inner_center {
+  display: flex;
+  flex-direction: column;
+}
+footer .footer_inner .footer_inner_center ul {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+footer .footer_inner .footer_inner_center ul li {
+  font-family: pretendard;
+  font-size: 1.6rem;
+}
+footer .footer_inner .footer_inner_center ul li:last-child {
+  font-size: 2rem;
+  font-weight: bold;
+}
+footer .footer_inner .footer_inner_right {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  font-family: pretendard;
+}
+footer .footer_inner .footer_inner_right .inner_right_top {
+  display: flex;
+  flex-direction: column;
+}
+footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
+  font-size: 2.2rem;
+  font-weight: bold;
+}
+footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
+  font-size: 3.6rem;
+  font-weight: bold;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom {
+  display: flex;
+  gap: 5px;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
+  font-size: 1.6rem;
+  font-weight: bold;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
+  font-size: 1.2rem;
 }
